--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     <img src="DSC_0053.JPG" alt="E233系方向幕" height="150" width="200" vspace="10"><br>
     通勤快速上野行き 2021年2月19日 宇都宮駅
     <br><br>
-    <a href="saro site.html">戻る</a>   
+    <a href="https://10102site.github.io/saro/">戻る</a>   
 </html>
