--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <body bgcolor="005050" text="ffffff"></body>
+    <head>
+        <meta charset="UTF-8">
+                 <meta name="viewport" content="width=device-width">
+    </head>
     <title>方向幕のページ</title>
     <h1>方向幕のページ</h1>
     205湘南色が撮影した方向幕を載せるだけのページ<br>
