--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>方向幕のページ</h1>
     205湘南色が撮影した方向幕を載せるだけのページ<br>
     一部今では見れない方向幕も<br><br>
-    <img src="DSC_0952.JPG" alt="E3系方向幕" height="150" width="200" vspace="10"><br><br>
-    <img src="DSC_0953.JPG" alt="E3系方向幕" height="150" width="200" vspace="10"><br><br>
-    <img src="DSC_0954.JPG" alt="E3系方向幕" height="150" width="200" vspace="10"><br><br>
+    <img src="DSC_0952.JPG" alt="E3系方向幕" height="150" width="200" vspace="10"><br>
+    <img src="DSC_0953.JPG" alt="E3系方向幕" height="150" width="200"><br>
+    <img src="DSC_0954.JPG" alt="E3系方向幕" height="150" width="200" vspace="10"><br>
     つばさ145号新庄行き 2022年1月9日 宇都宮駅<br>
     <img src="DSC_0889.JPG" alt="E131系方向幕" height="150" width="200" vspace="10"><br>
     試9631M 2022年1月9日 宝積寺駅<br>
