--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <h1>方向幕のページ</h1>
     205湘南色が撮影した方向幕を載せるだけのページ<br>
     一部今では見れない方向幕も<br><br>
-    <img src="DSC_0952.JPG" alt="E3系方向幕" height="150" width="200"><br>
-    <img src="DSC_0953.JPG" alt="E3系方向幕" height="150" width="200"><br>
-    <img src="DSC_0954.JPG" alt="E3系方向幕" height="150" width="200"><br>
+    <img src="DSC_0952.JPG" alt="E3系方向幕" height="150" width="200">
+    <img src="DSC_0953.JPG" alt="E3系方向幕" height="150" width="200">
+    <img src="DSC_0954.JPG" alt="E3系方向幕" height="150" width="200">
     つばさ145号新庄行き 2022年1月9日 宇都宮駅<br>
-    <img src="DSC_0889.JPG" alt="E131系方向幕" height="150" width="200"><br>
+    <img src="DSC_0889.JPG" alt="E131系方向幕" height="150" width="200">
     試9631M 2022年1月9日 宝積寺駅<br>
-    <img src="DSC_0036.JPG" alt="10000系方向幕" height="150" width="200"><br>
+    <img src="DSC_0036.JPG" alt="10000系方向幕" height="150" width="200">
     特急小江戸号西武新宿行き 2021年3月25日 本川越駅<br>
-    <img src="DSC_0053.JPG" alt="E233系方向幕" height="150" width="200"><br>
+    <img src="DSC_0053.JPG" alt="E233系方向幕" height="150" width="200">
     通勤快速上野行き 2021年2月19日 宇都宮駅<br>
     <br><br>
     <a href="https://10102site.github.io/saro/">戻る</a>   
