--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="DSC_0053.JPG" alt="E233系方向幕" height="150" width="200" vspace="10"><br>
     通勤快速上野行き 2021年2月19日 宇都宮駅<br>
     <img src="FQDyixXagAU043O.jpg" alt="E231系方向幕" height="150" width="200" vspace="10"><br>
-    普通大宮行き 2022年4月10日 栗橋駅<br>
+    普通大宮行き 2022年4月10日 栗橋駅
     <br><br>
     <a href="https://10102site.github.io/saro/">戻る</a>   
 </html>
