--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <img src="FQDyixXagAU043O.jpg" alt="E231系方向幕" height="150" width="200" vspace="10"><br>
     普通大宮行き 2022年4月10日 栗橋駅<br>
     <img src="0bb47706-s.jpg" alt="651系方向幕" height="150" width="200" vspace="10"><br>
-    臨時 2021年2月20日 新前橋駅
+    臨時 2021年2月20日 新前橋駅<br>
+    <img src="IMG_2022-07-03-11-38-59-235.jpg" alt="6000系方向幕" height="150" width="200" vspace="10"><br>
+    急行拝島行き 2022年7月3日 西武新宿駅
     <br><br>
     <a href="https://10102site.github.io/saro/">戻る</a>   
 </html>
