--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <img src="0bb47706-s.jpg" alt="651系方向幕" height="150" width="200" vspace="10"><br>
     臨時 2021年2月20日 新前橋駅<br>
     <img src="IMG_2022-07-03-11-38-59-235.jpg" alt="6000系方向幕" height="150" width="200" vspace="10"><br>
-    急行拝島行き 2022年7月3日 西武新宿駅
+    急行拝島行き 2022年7月3日 西武新宿駅<br>
+    <img src="IMG_2022-11-07-12-05-688.jpg" alt="185系方向幕" height="150" width="200" vspace="10"><br>
+    修学旅行 2022年11月7日 宇都宮駅
     <br><br>
     <a href="https://10102site.github.io/saro/">戻る</a>   
 </html>
