--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body bgcolor="005050" text="ffffff"></body>
+    <body bgcolor="005050" text="ffffff">
     <head>
         <meta charset="UTF-8">
                  <meta name="viewport" content="width=device-width">
@@ -25,7 +25,12 @@
     <img src="IMG_2022-07-03-11-38-59-235.jpg" alt="6000系方向幕" height="150" width="200" vspace="10"><br>
     急行拝島行き 2022年7月3日 西武新宿駅<br>
     <img src="IMG_2022-11-07-12-05-28-688.jpg" alt="185系方向幕" height="150" width="200" vspace="10"><br>
-    修学旅行 2022年11月7日 宇都宮駅
+    修学旅行 2022年11月7日 宇都宮駅<br>
+    <img src="IMG_2023-02-03-20-25-53-994.jpg" alt="651系方向幕" height="150" width="200" vspace="10"><br>
+    特急スワローあかぎ号高崎行き 2023年2月3日 大宮駅<br>
+    <img src="IMG_2023-01-07-14-45-52-667.jpg" alt="E257系方向幕" height="150" width="200" vspace="10"><br>
+    特急(5号車) 2023年1月7日 成田駅
     <br><br>
-    <a href="https://10102site.github.io/saro/">戻る</a>   
+    <a href="https://10102site.github.io/saro/">戻る</a> 
+    </body>  
 </html>
